# goit-pythonweb-hw-10

./: docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
src/conf/: avatars.py  config.py  email.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py
src/templates/: verify_email.html
